--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
     <h1>Todos</h1>
     <input type="text" id="input" placeholder="Enter your todos">
+    <label for="HideCompleted">Hide Completed<input type="checkbox" name="" id="HideCompleted"></label>
     <div id="mybuttons"><button id="btn1">Add</button>
     <button id="btn2">Delete</button></div>
     <div id="summary"></div>
+    <div id="paragraphsCard"></div>
     <script src="index.js"></script>
 </body>
 </html>
